syntax = "proto3";
package transaction;

import "domain/block/model/block.proto";
import "domain/transaction/model/transaction.proto";

option go_package = "github.com/blackhorseya/ryze/entity/domain/transaction/biz";

message ListTransactionRequest {
  int64 page = 1;
  int64 page_size = 2;
}

message ListTransactionsByAccountRequest {
  string account_id = 1;
  int64 page = 2;
  int64 page_size = 3;
}

// Service definition for handling transactions.
service TransactionService {
  rpc ProcessBlockTransactions(stream block.Block) returns (stream Transaction) {}

  rpc ListTransactions(ListTransactionRequest) returns (stream Transaction) {}

  rpc ListTransactionsByAccount(ListTransactionsByAccountRequest) returns (stream Transaction) {}
}
